refactor(DS): minor optimizations